# airline-analysis

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  typescript
scripts/: analyze_columns.py  constants.py  extract_csvs.py  load_clickhouse.py  migrate_clickhouse_to_postgres.py  query_databases.py  retrieve_data.py
