[tool.poetry]
name = "airline-analysis"
version = "0.1.0"
description = "Flight data ingestion and analysis using ClickHouse and PostgreSQL"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"
clickhouse-connect = "^0.8.18"
psycopg2-binary = "^2.9.10"
pandas = "^2.3.0"
sqlalchemy = "^2.0.41"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
